--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 # You should customize this list as applicable to your project.
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
+#pycharm
+.idea/
+.DS_Store
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
 
 # Node artifact files
 node_modules/
@@ -11,7 +17,9 @@ dist/
 *.class
 
 # Compiled Python bytecode
+__pycharm__/
 *.py[cod]
+*$py.class
 
 # Log files
 *.log
