--- a/suite_scanflow_auto/suite.conf
+++ b/suite_scanflow_auto/suite.conf
@@ -1,5 +1,8 @@
 AUT=scanflow
+ENVVARS=envvars
 LANGUAGE=Python
 OBJECTMAPSTYLE=script
 VERSION=3
 WRAPPERS=Qt
+HOOK_SUB_PROCESSES=true
+TEST_CASES=tst_05_scan_toolbar_status tst_05_import_export_send tst_05_import_toolbar_status
