update test data

--- a/suite_scanflow_auto/shared/scripts/Resources/config.ini
+++ b/suite_scanflow_auto/shared/scripts/Resources/config.ini
@@ -7,9 +7,9 @@ ScanFlow_Launch_CmdLine=scanflow "C:\ProgramData\DEXIS IS\ScanFlow\inputdata.xml
 
 [test]
 test_data_source1=D:\data\
-test_source_path=V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\1.0.9.1\
+test_source_path=V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\
 #test_source_path=D:\Downloads\
-test_log_path=C:\Users\SQE\Documents\Squish Test Results\logs\
+test_log_path=V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\logs\
 tools_import_scanview=tools.import.scanview.csv
 tools_scan_scanview=tools.scan.scanview.csv
 tools_import_scanview_impress=tools.import.scanview_impress.csv
