--- a/suite_scanflow_auto/shared/scripts/Resources/config.ini
+++ b/suite_scanflow_auto/shared/scripts/Resources/config.ini
@@ -7,9 +7,11 @@ ScanFlow_Launch_CmdLine=scanflow "C:\ProgramData\DEXIS IS\ScanFlow\inputdata.xml
 
 [test]
 test_data_source1=D:\data\
-test_source_path=V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\
+test_source_path=V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\cszx\
 #test_source_path=D:\Downloads\
 test_log_path=V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\logs\
+test_config_path=V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\test_config\
+test_mode=release
 tools_import_scanview=tools.import.scanview.csv
 tools_scan_scanview=tools.scan.scanview.csv
 tools_import_scanview_impress=tools.import.scanview_impress.csv
