add for auto edit test mode

--- a/suite_scanflow_auto/shared/scripts/Resources/config.ini
+++ b/suite_scanflow_auto/shared/scripts/Resources/config.ini
@@ -1,18 +1,18 @@
 [product]
-ScanFlow_Version=1.0.9.1
-ScanFlow_Root=C:\ProgramData\DEXIS IS\ScanFlow
-ScanFlow_Log_Path=C:\ProgramData\DEXIS IS\ScanFlow\log\
-ScanFlow_Log_Name_ScanFlow_Format=ScanFlow_yyyymmdd.csv
-ScanFlow_Launch_CmdLine=scanflow "C:\ProgramData\DEXIS IS\ScanFlow\inputdata.xml"
+ScanFlow_Version = 1.0.9.1
+ScanFlow_Root = C:\ProgramData\DEXIS IS\ScanFlow
+ScanFlow_Log_Path = C:\ProgramData\DEXIS IS\ScanFlow\log\
+ScanFlow_Log_Name_ScanFlow_Format = ScanFlow_yyyymmdd.csv
+ScanFlow_Launch_CmdLine = scanflow "C:\ProgramData\DEXIS IS\ScanFlow\inputdata.xml"
 
 [test]
-test_data_source1=D:\data\
-test_source_path=V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\cszx\
-#test_source_path=D:\Downloads\
-test_log_path=V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\logs\
-test_config_path=V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\test_config\
-test_mode=release
-tools_import_scanview=tools.import.scanview.csv
-tools_scan_scanview=tools.scan.scanview.csv
-tools_import_scanview_impress=tools.import.scanview_impress.csv
-tools_import_refineview=tools.import.refineview.csv
+test_data_source1 = D:\data\
+test_source_path = V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\cszx\
+test_log_path = V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\logs\
+test_config_path = V:\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\test_config\
+test_mode = debug
+tools_import_scanview = tools.import.scanview.csv
+tools_scan_scanview = tools.scan.scanview.csv
+tools_import_scanview_impress = tools.import.scanview_impress.csv
+tools_import_refineview = tools.import.refineview.csv
+
