update scanflow version to 1.0.9.2

--- a/suite_scanflow_auto/shared/scripts/Resources/config.ini
+++ b/suite_scanflow_auto/shared/scripts/Resources/config.ini
@@ -1,5 +1,5 @@
 [product]
-ScanFlow_Version = 1.0.9.1
+ScanFlow_Version = 1.0.9.2
 ScanFlow_Root = C:\ProgramData\DEXIS IS\ScanFlow
 ScanFlow_Log_Path = C:\ProgramData\DEXIS IS\ScanFlow\log\
 ScanFlow_Log_Name_ScanFlow_Format = ScanFlow_yyyymmdd.csv
@@ -11,7 +11,7 @@ test_source_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_s
 test_log_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\logs\
 test_config_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\test_config\
 
-test_mode = debug11
+test_mode = debug
 
 tools_import_scanview = tools.import.scanview.csv
 tools_scan_scanview = tools.scan.scanview.csv
