add 3 test cases

--- a/suite_scanflow_auto/suite.conf
+++ b/suite_scanflow_auto/suite.conf
@@ -1,8 +1,9 @@
 AUT=scanflow
 ENVVARS=envvars
+HOOK_SUB_PROCESSES=true
+IMPLICITAUTSTART=0
 LANGUAGE=Python
 OBJECTMAPSTYLE=script
+TEST_CASES=tst_05_scan_toolbar_status tst_05_import_export_send tst_05_import_toolbar_status tst_05_workflow_denture tst_05_workflow_implant
 VERSION=3
 WRAPPERS=Qt
-HOOK_SUB_PROCESSES=true
-TEST_CASES=tst_05_scan_toolbar_status tst_05_import_export_send tst_05_import_toolbar_status
