fix FileUtil, refactor CatalogsUtil

--- a/suite_scanflow_auto/shared/scripts/Resources/config.ini
+++ b/suite_scanflow_auto/shared/scripts/Resources/config.ini
@@ -7,12 +7,12 @@ ScanFlow_Launch_CmdLine = scanflow "C:\ProgramData\DEXIS IS\ScanFlow\inputdata.x
 
 [test]
 test_data_source1 = D:\data\
-test_source_path1 = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\cszx\
-test_source_path = \\10.196.98.73\test\Data\
+test_source_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\cszx\
+test_source_path1 = \\10.196.98.73\test\Data\
 test_log_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\logs\
 test_config_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\test_config\
 
-test_mode = release
+test_mode = debug
 
 tools_import_scanview = tools.import.scanview.csv
 tools_scan_scanview = tools.scan.scanview.csv
