update test module in config

--- a/suite_scanflow_auto/shared/scripts/Resources/config.ini
+++ b/suite_scanflow_auto/shared/scripts/Resources/config.ini
@@ -6,16 +6,23 @@ ScanFlow_Log_Name_ScanFlow_Format = ScanFlow_yyyymmdd.csv
 ScanFlow_Launch_CmdLine = scanflow "C:\ProgramData\DEXIS IS\ScanFlow\inputdata.xml"
 
 [test]
-test_data_source1 = D:\data\
-test_source_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\cszx\
-test_source_path1 = \\10.196.98.73\test\Data\
-test_log_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\logs\
-test_config_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\test_config\
-
-test_mode = debug
-
+test_mode = release
+#when tools update in some version, backup old versions to folder tools.backup.ScanFlow_Version i.e. tools.backup.1.0.9.2
 tools_import_scanview = tools.import.scanview.csv
 tools_scan_scanview = tools.scan.scanview.csv
 tools_import_scanview_impress = tools.import.scanview_impress.csv
 tools_import_refineview = tools.import.refineview.csv
+
+[test.debug]
+test_source_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\cszx\
+test_log_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\logs\
+test_config_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\test_config\
+
+[test.release]
+test_source_path = \\10.196.98.73\test\Data\
+test_log_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\logs\
+test_config_path = \\10.196.98.73\test\Lion\Kun Shen\storage02_Kun Shen\result_scanflow\automaticTest\test_config\
+
+
+
 
