--- a/suite_scanflow_auto/shared/scripts/Resources/config.ini
+++ b/suite_scanflow_auto/shared/scripts/Resources/config.ini
@@ -1,4 +1,5 @@
 [product]
+ScanFlow_Temp_folder=C:\temp
 ScanFlow_Version = 1.0.9.2
 ScanFlow_Root = C:\ProgramData\DEXIS IS\ScanFlow
 ScanFlow_Log_Path = C:\ProgramData\DEXIS IS\ScanFlow\log\
